--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,6 @@ Thumbs.db #thumbnail cache on Windows
 .history
 .ionide
 
+
+.xlsx
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode
